2001-07-25  Chema Celorio  <chema@celorio.com>

	* Makefile.am: remove the DESKTOP_IN_RULE and copy the sed here

2001-07-25  Richard Hestilow  <hestilow@ximian.com:

	* prefs-widget.c (read_preferences): Swap right and left enable.
	  (left_handed_selected_cb): Ditto.
	  (right_handed_selected_cb): Ditto. 

2001-07-24  Bradford Hovinen  <hovinen@ximian.com>

	* Makefile.am (pixmap_DATA): Fixed pixmap_DATA line to install
	mouse pixmaps

	Courtesy Stephen Browne <stephen.browne@sun.com>:
	* mouse-properties-capplet.c: bonobo-conf rewrite
	(setup_dialog): Use bonobo_peditor_option_radio_construct

2001-07-20  Chema Celorio  <chema@celorio.com>

	* RELEASE : 1.5.0

2001-07-19  Chema Celorio  <chema@celorio.com>

	* Makefile.am (cappletname): distcheck love

2001-07-19  Bradford Hovinen  <hovinen@ximian.com>

	* Makefile.am (EXTRA_DIST): Added mouse-left.png and mouse-right.png

2001-07-18  Chema Celorio  <chema@celorio.com>

	* prefs-widget.c (set_pixmap_file): the path of the pixmaps was
	changed

	* mouse-properties.glade: set a group for the radio buttons

2001-07-17  Bradford Hovinen  <hovinen@ximian.com>

	* Makefile.am (EXTRA_DIST): Changed Applications_DATA to
	Applications_in_files

2001-07-17  Jakub Steiner <jimmac@ximian.com>

	* mouse-left.png, mouse-right.png: hi-res images

2001-06-27  Richard Hestilow  <hestilow@ximian.com:

	* ChangeLog added.

	* mouse-properties.glade: New GUI by Anna Dirks.

	* mouse-left.png, mouse-right.png: Added.

	* Makefile.am: Install pixmaps.

	* prefs-widget.c (set_pixmap_file): Added function.
	  (threshold_changed_cb, read_preferences): Call new macro
	  THRESHOLD_CONVERT, as sensitivity is the reverse of threshold.
	  (read_preferences, prefs_widget_init): Change "threshold_entry" to
	  sensitivity_entry.
	  (prefs_widget_init): Call set_pixmap_file for the new pixmaps.