@@ -1,6 +1,6 @@
 <oaf_info>
 
-<oaf_server iid="OAFIID:Bonobo_Control_Capplet_mouse_properties_Factory" type="exe" location="mouse-properties">
+<oaf_server iid="OAFIID:Bonobo_Control_Capplet_mouse_properties_Factory" type="exe" location="/home/chema/gnome/bin/mouse-properties-capplet">
 	<oaf_attribute name="repo_ids" type="stringv">
 		<item value="IDL:GNOME/ObjectFactory:1.0"/>
 	</oaf_attribute>
