@@ -13,7 +13,7 @@ legacy_sources =				\
 	preferences.c		preferences.h
 
 if BONOBO_CONF_ENABLE
-DESKTOP_EXEC_LINE = gnomecc --run-capplet mouse-properties
+DESKTOP_EXEC_LINE = gnomecc --run-capplet mouse-properties-capplet
 mouse_properties_capplet_SOURCES = $(bonobo_sources)
 else
 DESKTOP_EXEC_LINE = mouse-properties-capplet
@@ -27,6 +27,9 @@ defaults_DATA = mouse-properties.xml
 
 oafdir = $(datadir)/oaf
 oaf_DATA = Bonobo_Control_Capplet_mouse_properties.oaf
+
+$(oaffile): %.oaf: %.oaf.in
+	sed -e "s#REPLACEME_PLIZ#$(bindir)/$(bin_PROGRAMS)#" < $< > ${oaffile}
 
 ##
 ## You should not need to modify anything below this line
@@ -45,11 +48,12 @@ install-data-am: install-data-local
 
 INCLUDES   = $(GNOMECC_CAPPLETS_CFLAGS)
 CLEANFILES = $(GNOMECC_CAPPLETS_CLEANFILES)
-EXTRA_DIST = $(GNOMECC_CAPPLETS_EXTRA_DIST) $(oaf_DATA) $(defaults_DATA) $(bonobo_sources) $(legacy_sources)
+EXTRA_DIST = $(GNOMECC_CAPPLETS_EXTRA_DIST) $(oaf_DATA).in $(defaults_DATA) $(bonobo_sources) $(legacy_sources)
 iconsdir   = $(GNOMECC_ICONS_DIR)
 Gladedir   = $(GNOMECC_GLADE_DIR)
 pixmapdir  = $(GNOMECC_PIXMAPS_DIR)
 Glade_DATA = $(cappletname)-properties.glade
 icons_DATA = $(cappletname)-capplet.png
 desktop    = $(cappletname).desktop
+oaffile    = $(oaf_DATA)
 all-local: $(desktop)
