@@ -1,5 +1,10 @@
 2001-07-25  Chema Celorio  <chema@celorio.com>
 
+	* Makefile.am : generate the .oaf file from the .oaf.in file
+	The DESKTOP_EXEC_LINE was missing the --capplet at the end, add
+	
+2001-07-25  Chema Celorio  <chema@celorio.com>
+
 	* Makefile.am: remove the DESKTOP_IN_RULE and copy the sed here
 
 2001-07-25  Richard Hestilow  <hestilow@ximian.com:
